--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,108 @@
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+	<title>Levitation</title>
+
+	<link rel="stylesheet" href="{{ STATIC_URL }}style.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/style1.css" type="text/css" media="screen" />
+	<!--
+	<link rel="stylesheet" href="css/style2.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/style3.css" type="text/css" media="screen" />
+	<link rel="stylesheet" href="css/style4.css" type="text/css" media="screen" />
+	-->
+	
+	
+	<link rel="stylesheet" href="{{ STATIC_URL }}prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" charset="utf-8" />
+	
+	
+	<script type='text/javascript' src='{{ STATIC_URL }}js/jquery.js'></script>
+	<script src="{{ STATIC_URL }}prettyPhoto/js/jquery.prettyPhoto.js" type="text/javascript" charset="utf-8"></script>
+	<script type='text/javascript' src='{{ STATIC_URL }}js/cufon.js'></script>
+	<script type='text/javascript' src='{{ STATIC_URL }}js/quicksand.font.js'></script>
+	
+	
+	<script type='text/javascript' src='{{ STATIC_URL }}js/custom.js'></script>
+	
+	<!--[if IE 6]>
+	<script type='text/javascript' src='js/dd_belated_png.js'></script>
+	<script>DD_belatedPNG.fix('.ie6fix');</script>
+	<![endif]-->
+	
 </head>
-<body>
-	Goodbye depression.
+
+<body id='frontpage'>
+	<div id="top">
+		<div id="head"> 
+	      	<h1 class="logo"><a href="#" title="#">Toolani</a></h1>
+
+	        <ul id="nav">
+				<li><a href="{{ STATIC_URL }}index.html">Home</a></li>
+				<li class="current_page_item"><a href="{{ STATIC_URL }}portfolio.html">Portfolio</a></li>
+				<li><a href="{{ STATIC_URL }}page.html">Template Files</a>
+					<ul>
+					<li><a href='{{ STATIC_URL }}index.html'>Index Page</a></li>
+					<li><a href='{{ STATIC_URL }}index2.html'>Alternate Index Page</a></li>
+					<li><a href='{{ STATIC_URL }}blog.php'>Blog</a></li>
+					<li><a href='{{ STATIC_URL }}single.html'>Single Entry</a></li>
+					<li><a href='{{ STATIC_URL }}page.html'>Static Page (About)</a></li>
+					<li><a href='{{ STATIC_URL }}contact.php'>Contact</a></li>
+					<li><a href='{{ STATIC_URL }}portfolio.html'>Portfolio</a></li>
+					<li><a href='#'>Second Level &raquo;</a>
+						<ul>
+						<li><a href='#'>Just for</a></li>
+						<li><a href='#'>Demonstration</a></li>
+						<li><a href='#'>Purpose</a></li>
+						</ul>
+					</li>
+					</ul>
+				</li>
+				<li><a href="{{ STATIC_URL }}blog.php">Company Blog</a></li>
+				<li><a href="{{ STATIC_URL }}contact.php">Contact</a></li>
+			</ul>
+			<form action="" id="searchform" method="get">
+				<div><input type="text" id="s" name="s" value=""/>
+				<input type="submit" value="S" id="searchsubmit" class="button ie6fix"/>
+				</div>
+			</form>
+	                
+		</div><!-- end head-->
+	            
+	            <div class="additional_info">
+	            	<h2><strong>OUR PORTFOLIO</strong><br/>HAVE A LOOK AT OUR LATEST STUFF</h2>
+	            </div>
+	        
+	       <div id="main">  
+	            <div class="wrapper">
+	            	<div class='box box_small box1'>
+	            		<h3><a href='single.html'>Chapter 16</a></h3>
+	            		<a href='{{ STATIC_URL }}dispersion.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}dispersion.png" alt="" /></a>
+	            	</div> <!--end box_small-->
+	            	
+	            	<div class='box box_small box2'>
+	            		<h3><a href='{{ STATIC_URL }}single.html'>Nestle Website</a></h3>
+	            		<a href='{{ STATIC_URL }}files/featured2.jpg#2' rel='lightbox[grouped]' ><img src="{{ STATIC_URL }}files/featured_small2.jpg" alt="" /></a>
+	            	</div> <!--end box_small-->
+	            	
+	            	<div class='box box_small box3'>
+	            		<h3><a href='{{ STATIC_URL }}single.html'>Twicet Business &amp; Portfolio</a></h3>
+	            		<a href='{{ STATIC_URL }}files/featured3.jpg#3' rel='lightbox[grouped]' ><img src="{{ STATIC_URL }}files/featured_small3.jpg" alt="" /></a>
+	            	</div> <!--end box_small-->
+	            </div><!--end wrapper-->
+	            
+		</div><!--end main-->
+	</div><!--end top-->   
+	
+	   
+	<div id="footer">
+	<span class='alignleft'> Copyright &copy; Kriesi.at - New Media Design - remove this once purchased ;)</span>
+			
+    <span class="alignright">
+           <a  href='#'>AGB</a> | 
+           <a  href='#'>Legal Notice</a> 
+    </span>
+    
+    </div><!--end footer-->
 </body>
-</html>	
+</html>
