--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 <body id='frontpage'>
 	<div id="top">
 		<div id="head"> 
-	      	<h1 class="logo"><a href="#" title="#">Toolani</a></h1>
+	      	<h1 class="logo">TOTAL STATISTICS</a></h1>
 
 	        <ul id="nav">
 				<li><a href="{{ STATIC_URL }}index.html">Home</a></li>
@@ -76,19 +76,16 @@
 	       <div id="main">  
 	            <div class="wrapper">
 	            	<div class='box box_small box1'>
-	            		<h3><a href='single.html'>Chapter 16</a></h3>
+	            		<h3><a href='single.html'>Dispersion Plot</a></h3>
 	            		<a href='{{ STATIC_URL }}dispersion.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}dispersion.png" alt="" /></a>
 	            	</div> <!--end box_small-->
 	            	
 	            	<div class='box box_small box2'>
-	            		<h3><a href='{{ STATIC_URL }}single.html'>Nestle Website</a></h3>
-	            		<a href='{{ STATIC_URL }}files/featured2.jpg#2' rel='lightbox[grouped]' ><img src="{{ STATIC_URL }}files/featured_small2.jpg" alt="" /></a>
+	            		<h3><a href='{{ STATIC_URL }}single.html'>Frequency Plot</a></h3>
+	            		<a href='{{ STATIC_URL }}frequency.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}frequency.png" alt="" /></a>
 	            	</div> <!--end box_small-->
 	            	
-	            	<div class='box box_small box3'>
-	            		<h3><a href='{{ STATIC_URL }}single.html'>Twicet Business &amp; Portfolio</a></h3>
-	            		<a href='{{ STATIC_URL }}files/featured3.jpg#3' rel='lightbox[grouped]' ><img src="{{ STATIC_URL }}files/featured_small3.jpg" alt="" /></a>
-	            	</div> <!--end box_small-->
+	            	
 	            </div><!--end wrapper-->
 	            
 		</div><!--end main-->
