--- a/templates/index.html
+++ b/templates/index.html
@@ -34,72 +34,31 @@
 
 <body id='frontpage'>
 	<div id="top">
-		<div id="head"> 
-	      	<h1 class="logo">TOTAL STATISTICS</a></h1>
-
-	        <ul id="nav">
-				<li><a href="{{ STATIC_URL }}index.html">Home</a></li>
-				<li class="current_page_item"><a href="{{ STATIC_URL }}portfolio.html">Portfolio</a></li>
-				<li><a href="{{ STATIC_URL }}page.html">Template Files</a>
-					<ul>
-					<li><a href='{{ STATIC_URL }}index.html'>Index Page</a></li>
-					<li><a href='{{ STATIC_URL }}index2.html'>Alternate Index Page</a></li>
-					<li><a href='{{ STATIC_URL }}blog.php'>Blog</a></li>
-					<li><a href='{{ STATIC_URL }}single.html'>Single Entry</a></li>
-					<li><a href='{{ STATIC_URL }}page.html'>Static Page (About)</a></li>
-					<li><a href='{{ STATIC_URL }}contact.php'>Contact</a></li>
-					<li><a href='{{ STATIC_URL }}portfolio.html'>Portfolio</a></li>
-					<li><a href='#'>Second Level &raquo;</a>
-						<ul>
-						<li><a href='#'>Just for</a></li>
-						<li><a href='#'>Demonstration</a></li>
-						<li><a href='#'>Purpose</a></li>
-						</ul>
-					</li>
-					</ul>
-				</li>
-				<li><a href="{{ STATIC_URL }}blog.php">Company Blog</a></li>
-				<li><a href="{{ STATIC_URL }}contact.php">Contact</a></li>
-			</ul>
-			<form action="" id="searchform" method="get">
-				<div><input type="text" id="s" name="s" value=""/>
-				<input type="submit" value="S" id="searchsubmit" class="button ie6fix"/>
-				</div>
-			</form>
-	                
-		</div><!-- end head-->
-	            
-	            <div class="additional_info">
-	            	<h2><strong>OUR PORTFOLIO</strong><br/>HAVE A LOOK AT OUR LATEST STUFF</h2>
-	            </div>
+	    <div class="additional_info">
+        	<h2><strong>TOTAL STATISTICS</strong><br/>CHAPTER GRAPHS</h2>
+        </div>
 	        
-	       <div id="main">  
-	            <div class="wrapper">
-	            	<div class='box box_small box1'>
-	            		<h3><a href='single.html'>Dispersion Plot</a></h3>
-	            		<a href='{{ STATIC_URL }}dispersion.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}dispersion.png" alt="" /></a>
-	            	</div> <!--end box_small-->
+		<div id="main">  
+		    <div class="wrapper">
+		    	<div class='box box_small box1'>
+		    		<h3><a href='single.html'>Dispersion Plot</a></h3>
+		    		<a href='{{ STATIC_URL }}dispersion.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}dispersion.png" alt="" /></a>
+		    	</div> <!--end box_small-->
+		    	
+		    	<div class='box box_small box2'>
+		    		<h3><a href='{{ STATIC_URL }}single.html'>Frequency Plot</a></h3>
+		    		<a href='{{ STATIC_URL }}frequency.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}frequency.png" alt="" /></a>
+		    	</div> <!--end box_small-->
 	            	
-	            	<div class='box box_small box2'>
-	            		<h3><a href='{{ STATIC_URL }}single.html'>Frequency Plot</a></h3>
-	            		<a href='{{ STATIC_URL }}frequency.png' rel='lightbox[grouped]' ><img width="280" height="180" src="{{ STATIC_URL }}frequency.png" alt="" /></a>
-	            	</div> <!--end box_small-->
 	            	
-	            	
-	            </div><!--end wrapper-->
+            </div><!--end wrapper-->
 	            
 		</div><!--end main-->
 	</div><!--end top-->   
 	
 	   
 	<div id="footer">
-	<span class='alignleft'> Copyright &copy; Kriesi.at - New Media Design - remove this once purchased ;)</span>
-			
-    <span class="alignright">
-           <a  href='#'>AGB</a> | 
-           <a  href='#'>Legal Notice</a> 
-    </span>
-    
+
     </div><!--end footer-->
 </body>
 </html>
